<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@color/layout_background2"
    android:layout_margin="8dp"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16.0dip">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/icon_live" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
                android:gravity="center_vertical"
                android:minHeight="32.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/infd_txt_model"
                    android:textColor="@color/white3"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:gravity="center_vertical"
                android:minHeight="32.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/infd_txt_name"
                    android:textColor="@color/white3"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:gravity="center_vertical"
                android:minHeight="32.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/infd_txt_ip"
                    android:textColor="@color/white3"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:gravity="center_vertical"
                android:minHeight="32.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/infd_txt_uuid"
                    android:textColor="@color/white3"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_uuid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </TableRow>

            <TableRow
                android:id="@+id/row_wdlxtv"
                android:gravity="center_vertical"
                android:minHeight="32.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/infd_txt_wdlxtv"
                    android:textColor="@color/white3"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_wdlxtv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </TableRow>


            <TableRow android:gravity="center_vertical"
                android:minHeight="32.0dip">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/infd_txt_remote"
                    android:textColor="@color/white3"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_remote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/iconb_remote" />
            </TableRow>

            <TableRow android:gravity="center_vertical"
                android:minHeight="32.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/infd_txt_keyboard"
                    android:textColor="@color/white3"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_keyboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/iconb_keyboard" />
            </TableRow>

            <TableRow android:gravity="center_vertical"
                android:minHeight="32.0dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/infd_txt_upnp"
                    android:textColor="@color/white3"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_upnp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/iconb_upnp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>